Fix cookie consent form layout and z-index

--- a/src/components/GoogleAnalytics/styles.module.scss
+++ b/src/components/GoogleAnalytics/styles.module.scss
@@ -5,9 +5,9 @@
   left: 0;
   bottom: 0;
   padding: 1rem 2rem 2rem 2rem;
-  text-align: right;
   background-color: rgb(51,55,70);
   border-top: 1px solid #545a70;
+  z-index: 10;
 
   a {
     text-decoration: underline;
